.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/Practical-ML-on-H2O
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=6ecbd79d447eb4e239a1bcef3d41cd945f4717e315b3eddb
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=6ecbd79d447eb4e239a1bcef3d41cd945f4717e315b3eddb
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | INFO] Creating new notebook in 
[NotebookApp | INFO] Kernel started: fb3c503d-fb55-46ab-9bb5-e24f8284ef15
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel fb3c503d-fb55-46ab-9bb5-e24f8284ef15
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Saving file at /Week 1 - A quick deep learning overview.ipynb
[NotebookApp | INFO] Creating new notebook in 
[NotebookApp | INFO] Kernel started: 7c0a5ddb-abb5-4e6b-b158-536be9f65538
[NotebookApp | INFO] Starting buffering for fb3c503d-fb55-46ab-9bb5-e24f8284ef15:1fa2cd8723ea4bce9727b623ce822f56
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 7c0a5ddb-abb5-4e6b-b158-536be9f65538
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel fb3c503d-fb55-46ab-9bb5-e24f8284ef15
[NotebookApp | INFO] Saving file at /AutoML H2O.ipynb
[NotebookApp | INFO] Saving file at /AutoML H2O.ipynb
[NotebookApp | INFO] Saving file at /AutoML H2O.ipynb
[NotebookApp | INFO] Saving file at /AutoML H2O.ipynb
[NotebookApp | INFO] Starting buffering for 7c0a5ddb-abb5-4e6b-b158-536be9f65538:c60c7d7084384e5db0216763cb4d14f0
[NotebookApp | INFO] Kernel shutdown: 7c0a5ddb-abb5-4e6b-b158-536be9f65538
[NotebookApp | INFO] Kernel shutdown: fb3c503d-fb55-46ab-9bb5-e24f8284ef15
[NotebookApp | WARNING] Got events for closed stream None
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 0 kernels
